grammar.txt
translation_unit
    : TOK_CLASS qualified_name TOK_SEMI class_member_list 
    | TOK_INTERFACE qualified_name TOK_SEMI interface_member_list
    | TOK_STRUCT qualified_name TOK_SEMI struct_member_list
    | TOK_MODULE qualified_name TOK_SEMI module_member_list
    ;

class_member_list
    : import class_member_list
    | def class_member_list
    | variable class_member_list
    | constructor class_member_list
    | destructor class_member_list
    | function class_member_list
    | <empty>
    ;

interface_member_list
    : import interface_member_list
    | def interface_member_list
    | prototype interface_member_list
    | <empty>
    ;

struct_member_list
    : import struct_member_list
    | def struct_member_list
    | variable struct_member_list
    | constructor struct_member_list
    | function struct_member_list
    | <empty>
    ;

module_member_list
    : import module_member_list
    | def module_member_list
    | function module_member_list
    | <empty>
    ;
    
import 
    : TOK_IMPORT qualified_name TOK_SEMI
    ;

def
    : TOK_DEF type TOK_TYPE TOK_SEMI
    ;

variable
    : access storage type TOK_IDENT initializer 
    ;

constructor
    : TOK_INIT argument_list access compound_statement
    ;

destructor
    : TOK_DESTROY argument_list compound_statement
    ;

function
    : TOK_IDENT argument_list access storage native type compound_statment
    ;

prototype
    : TOK_IDENT argument_list type TOK_SEMI
    ;

access 
    : TOK_PUBLIC
    | TOK_PRIVATE
    | TOK_PROTECTED
    | <empty>
    ;

storage
    : TOK_STATIC
    | <empty>
    ;
    
native
    : TOK_NATIVE
    | <empty>
    ;

type 
    : uint
    | int
    | ushort
    | short
    | ubyte
    | byte 
    | qualified_name
    ;

initializer     
    : TOK_EQUALS logical_or TOK_SEMI
    | TOK_SEMI
    ;

qualified_name
    : TOK_TYPE qualified_name_tail
    ;

qualified_name_tail
    : TOK_SCOPE TOK_TYPE qualified_name_tail
    | <empty>
    ;
    
compound_statement
    : TOK_LBRACE statement_list TOK_RBRACE
    ;

statement_list
    : statement statement_list
    | <empty>
    ;

statement
    : assignment TOK_SEMI
    | type TOK_IDENT initializer; 
    ;

assignment
    : logical_or assignment_list
    ;

assignment_list
    : TOK_ASSIGN assignment
    | TOK_MULASSIGN assignment
    | TOK_DIVASSIGN assignment
    | TOK_MODASSIGN assignment
    | TOK_SUBASSIGN assignment
    | TOK_ADDASSIGN assignment
    | TOK_LSHIFTASSIGN assignment
    | TOK_RSHIFTASSIGN assignment
    | TOK_BANDASSIGN assignment
    | TOK_BXORASSIGN assignment
    | TOK_BORASSIGN assignment
    ;

logical_or
    : logical_and logical_or_list
    ;

logical_or_list
    : TOK_OR logical_or
    | <empty>
    ;

logical_and
    : bitwise_or logical_and_list
    ;

logical_and_list
    : TOK_AND logical_and
    | <empty>
    ;

bitwise_or
    : bitwise_and bitwise_or_list
    ;

bitwise_or_list
    : TOK_BOR bitwise_or
    | TOK_BXOR bitwise_or
    | <empty>
    ;

bitwise_and
    : equality bitwise_and_list
    ;

bitwise_and_list
    : TOK_BAND bitwise_and
    | <empty>
    ;

equality
    : relation equality_list
    ;

equality_list
    : TOK_EQUAL equality
    : TOK_NEQUAL equality
    | <empty> 
    ;

relation
    : shift relation_list
    ;

relation_list
    : TOK_GT relation
    | TOK_LT relation
    | TOK_GTEQ relation
    | TOK_LTEQ relation
    | <empty>
    ;

shift
    : additive shift_list
    ;

shift_list
    : TOK_LSHIFT shift
    | TOK_RSHIFT shift
    | <empty>
    ;

addition
    : multiplication addition_list
    ;

addition_list
    : TOK_PLUS addition
    | TOK_MINUS addition
    | <empty>
    ;

multiplication
    : unary multiplication_list
    ;

multiplication_list
    : TOK_STAR multiplication
    | TOK_SLASH multiplication
    | TOK_MOD multiplication
    | <empty>
    ;

unary
    : postfix
    | TOK_INC unary
    | TOK_DEC unary
    | TOK_PLUS unary
    | TOK_MINUS unary
    | TOK_BANG unary
    | TOK_TILDE unary
    | TOK_STAR unary
    ;

postfix
    : primary postfix_list
    ;

postfix_list
    : TOK_LPAREN argument_list TOK_RPAREN postfix_list
    | TOK_LBRACKET assignment TOK_RBRACKET postfix_list
    | TOK_DOT TOK_IDENT postfix_list
    | TOK_INC postfix_list
    | TOK_DEC postfix_list
    | <empty>
    ;

primary:
    : TOK_STRING
    | TOK_NUMBER
    | TOK_IDENT
    | qualified_name
    | TOK_LPAREN assignment TOK_RPAREN
    ;
